feat: craeted the pumpkin head

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="icon" type="image/jpeg" href="./assets/images/pumpkin.jpg" />
     <title>Happy Halloween</title>
   </head>
   <body>
     <main>
       <div class="pumpkin">
-        <div class="pumpkin-eye-1"></div>
-        <div class="pumpkin-eye-2"></div>
+        <div class="pumpkin-eye pumpkin-eye-1"></div>
+        <div class="pumpkin-eye pumpkin-eye-2"></div>
         <div class="pumpkin-nose"></div>
-        <div class="pumpkin-mouth"></div>
-        <div class="pumpkin-teeth-1"></div>
-        <div class="pumpkin-teeth-2"></div>
+        <div class="pumpkin-mouth">
+          <div class="pumpkin-teeth pumpkin-teeth-1"></div>
+          <div class="pumpkin-teeth pumpkin-teeth-2"></div>
+          <div class="pumpkin-teeth pumpkin-teeth-3"></div>
+          <div class="pumpkin-teeth pumpkin-teeth-4"></div>
+        </div>
       </div>
     </main>
   </body>
