chore: added extra assets and styled it on the page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,62 @@
   </head>
   <body>
     <main>
+      <img
+        class="bat"
+        src="./assets/images/bats.png"
+        alt="pumpkin bat"
+        width="100px"
+        height="100px"
+      />
+      <img
+        class="basket"
+        src="./assets/images/candy-basket.png"
+        alt="pumpkin basket"
+        width="100px"
+        height="100px"
+      />
+      <img
+        class="candy"
+        src="./assets/images/candy.png"
+        alt="pumpkin candy"
+        width="150px"
+        height="100px"
+      />
+      <img
+        class="ghost"
+        src="./assets/images/ghost.png"
+        alt="ghost"
+        width="100px"
+        height="100px"
+      />
+      <img
+        class="hand"
+        src="./assets/images/hand.png"
+        alt=" hand"
+        width="100px"
+        height="150px"
+      />
+      <img
+        class="witch"
+        src="./assets/images/witch.png"
+        alt="witch"
+        width="100px"
+        height="100px"
+      />
+      <img
+        class="cat"
+        src="./assets/images/cat.png"
+        alt="cat"
+        width="150px"
+        height="150px"
+      />
+      <img
+        class="skeleton"
+        src="./assets/images/skeleton.png"
+        alt="skeleton"
+        width="150px"
+        height="150px"
+      />
       <div class="pumpkin">
         <div class="pumpkin-eye pumpkin-eye-1"></div>
         <div class="pumpkin-eye pumpkin-eye-2"></div>
