--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="A Happy Halloween animated site" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="icon" type="image/jpeg" href="./assets/images/pumpkin.jpg" />
     <title>Happy Halloween</title>
@@ -27,21 +28,21 @@
         class="candy"
         src="./assets/images/candy.png"
         alt="pumpkin candy"
-        width="150px"
+        width="133px"
         height="100px"
       />
       <img
         class="ghost"
         src="./assets/images/ghost.png"
         alt="ghost"
-        width="100px"
+        width="110px"
         height="100px"
       />
       <img
         class="hand"
         src="./assets/images/hand.png"
         alt=" hand"
-        width="100px"
+        width="72px"
         height="150px"
       />
       <img
@@ -62,7 +63,7 @@
         class="skeleton"
         src="./assets/images/skeleton.png"
         alt="skeleton"
-        width="150px"
+        width="141px"
         height="150px"
       />
       <div class="pumpkin">
