chore: added greeting text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <main>
+      <h1 class="happy">Happy</h1>
+      <h1 class="halloween">Halloween</h1>
       <img
         class="bat"
         src="./assets/images/bats.png"
