chore: added my trademark

--- a/index.html
+++ b/index.html
@@ -80,5 +80,18 @@
         </div>
       </div>
     </main>
+    <footer>
+      <p>
+        Designed and built with 💖 by
+        <a
+          className="my_github_link"
+          rel="noopener"
+          target="_blank"
+          href="https://github.com/DannyK05"
+        >
+          Kolade
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
